# learn-polish-app

./: .gitignore  CONTEXT.md  README.md  package.json  pnpm-lock.yaml
app/: .cta.json  drizzle.config.ts  package.json  vite.config.ts
app/drizzle/: 0000_aspiring_speed.sql  0001_unusual_supreme_intelligence.sql  0002_military_smiling_tiger.sql  0003_fair_master_chief.sql  0004_workable_rhodey.sql  0005_messy_hairball.sql  0006_wealthy_nomad.sql
app/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  _journal.json
app/public/: manifest.json
app/scripts/: purge-stub.mjs
app/src/: routeTree.gen.ts
app/src/audio/: recorder.test.ts  recorder.tsx
app/src/comprehension/: service.test.ts  service.ts
app/src/db/: index.ts  schema.test.ts  schema.ts
app/src/dictionary/: import-job.ts  loader.test.ts  loader.ts  mwe.test.ts  mwe.ts  parse.test.ts  parse.ts  service.test.ts  service.ts
app/src/exercises/: read-aloud.ts  recognition-mcq.test.ts  recognition-mcq.ts  spoken-recall.test.ts  spoken-recall.ts  types.ts
app/src/fsrs/: fsrs.test.ts  index.ts
app/src/gloss/: service.test.ts  service.ts
app/src/import/: pipeline.test.ts  (+2 more)
docs/: mvp-backlog.md  roadmap.md
docs/adr/: 0001-typescript-app-with-python-morphology-sidecar.md  0002-dictionary-and-gloss-data-strategy.md  0003-srs-driven-sessions-with-exercise-plugins.md  0004-sidecar-hosts-asr-and-tts.md
sidecar/: README.md  benchmark.py  main.py  pyproject.toml  test_analyze.py  test_transcribe.py
(+24 files in other folders)
